# aip_packing_algorithm

./: .gitignore  Dockerfile  Dockerfile_old  README.md  build_docker.sh  start_docker.sh
aip_packing_planning_interfaces/: CMakeLists.txt
aip_packing_planning_interfaces/msg/: PackageSequence.msg  Packages.msg
aip_packing_planning_interfaces/srv/: CMakeLists.txt  PackSequence.srv  package.xml
pkg_pack_node/: CMakeLists.txt  package.xml  setup.py
pkg_pack_node/launch/: pack_server.launch.py
pkg_pack_node/pkg_pack_node/: MaterialMaster_Packing_Algorithm.xlsx  PackAlgorithm_Client.py  PackAlgorithm_Server.py  Pack_Algorithm.py  PackingPlanning_Server.py  Packplan_Processing.py  ServerTest.py  Solution_image_transfer_server.py  TestClient.py  container_master.yaml  create_YAML_file.py  pack_node.py
pkg_pack_node/pkg_pack_node/Classes/: article.py  container.py  container_amount_transfer.py  genetic_algorithm.py  global_packplan_transfer.py  grid_search.py  items_transfer.py  order_data_transfer.py  packing_algorithm.py  request_transfer.py  solution.py
pkg_pack_node/pkg_pack_node/Old/: README.md
pkg_pack_node/pkg_pack_node/Old/control_node/: setup.cfg
pkg_pack_node/pkg_pack_node/Old/iras_srvs/: CMakeLists.txt
pkg_pack_node/pkg_pack_node/Old/moveit2_wrapper_new4/: CMakeLists.txt  README.md  package.xml
pkg_pack_node/pkg_pack_node/Old/moveit2_wrapper_new4/src/: moveit_wrapper_node.cpp
pkg_pack_node/pkg_pack_node/Old/pick_package/: setup.py
pkg_pack_node/pkg_pack_node/Old/pick_package/Packalgorithmus/: 01_Datensatz_4 Artikel.xlsx  01_Datensatz_Beispiel_1.xlsx  01_Datensatz_Beispiel_2.xlsx  01_Datensatz_Beispiel_3.xlsx  01_Datensatz_Beispiel_4.xlsx  01_Datensatz_Beispiel_5.xlsx  01_Datensatz_Beispiel_6.xlsx  Containerliste.xlsx
pkg_pack_node/pkg_pack_node/Old/pick_package/pick_package/: examples.py  iras_utils_transform.py  util.py
pkg_pack_node/pkg_pack_node/ROS/install/: local_setup.sh
pkg_pack_node/pkg_pack_node/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
pkg_pack_node/pkg_pack_node/log/: latest_build
src/install/: setup.sh
src/log/: latest_build
src/pkg_pack_node/: package.xml  setup.cfg  setup.py
src/pkg_pack_node/pkg_pack_node/: Materialstamm.xlsx  Pack_Algorithm.py  README.md  order_subscriber.py
src/pkg_pack_node/pkg_pack_node/Classes/: container.py  container_transfer.py  packing_algorithm.py  packplan.py  population.py  solution.py  topic_data.py
src/pkg_pack_node/pkg_pack_node/Old/control_node/: setup.py
src/pkg_pack_node/pkg_pack_node/Old/iras_srvs/: package.xml
src/pkg_pack_node/pkg_pack_node/Old/kuka_eki/krl/: EkiHwInterface.xml  kuka_eki_hw_interface.src
src/pkg_pack_node/pkg_pack_node/Old/moveit2_wrapper_new4/include/moveit_wrapper/: moveit_wrapper.h
src/pkg_pack_node/pkg_pack_node/Old/moveit2_wrapper_new4/launch/: moveit_wrapper.launch.py
src/pkg_pack_node/pkg_pack_node/Old/moveit2_wrapper_new4/src/: attach_move_detach_clients_node.cpp  moveit_wrapper.cpp
src/pkg_pack_node/pkg_pack_node/Old/pick_package/: package.xml  setup.cfg
src/pkg_pack_node/pkg_pack_node/Old/pick_package/Packalgorithmus/: B.1 Packalgorithmus.ipynb
src/pkg_pack_node/pkg_pack_node/Old/pick_package/Packalgorithmus/Simulationen/: 2023-02-14 14h33m04s BI01 Simulation Container.csv  2023-03-05 10h37m17s BI01 Simulation Packplan.csv  Beispiel_1 BI01 Simulation Packplan.csv  Beispiel_2 BI01 Simulation Packplan.csv  Beispiel_3 BI01 Simulation Container.csv  Beispiel_3 BI01 Simulation Packplan.csv  Beispiel_5 BI01 Simulation Container.csv  Beispiel_6 BI01 Simulation Packplan.csv
src/pkg_pack_node/pkg_pack_node/Old/pick_package/pick_package/: robot_client.py  two_packages_cylinder.py
src/pkg_pack_node/pkg_pack_node/ROS/: order_publisher.py  order_subscriber.py
src/pkg_pack_node/pkg_pack_node/ROS/install/: setup.sh
src/pkg_pack_node/pkg_pack_node/ROS/log/: latest_build
src/pkg_pack_node/pkg_pack_node/cython_files/: cython_part.c  cython_part.cp311-win_amd64.pyd  cython_part.pyx  setup.py
(+93 files in other folders)
