<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pkg_pack_node</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>Apache-2.0</license>

  <depend>ament_copyright</depend>
  <depend>ament_flake8</depend>
  <depend>ament_pep257</depend>
  <depend>python3-pytest</depend>
  <depend>open3d</depend>
  <depend>collections</depend>
  <depend>numpy</depend>
  <depend>random</depend>
  <depend>time</depend>
  <depend>pandas</depend>
  <depend>itertools</depend>
  <depend>math</depend>
  <depend>copy</depend>
  <depend>matplotlib.pyplot</depend>
  <depend>IPython.core.display</depend>
  <depend>functools</depend>
  <depend>operator</depend>
  <depend>csv</depend>
  <depend>datetime</depend>
  <depend>os</depend>



  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
